2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix missing board_dir initialisation when board is read 
	from db.

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix compilation failure without --enable-profils

2005-06-14  Yves Combe  <yves@ycombe.net>

	* fix stupid mistake (board->board_dir and board->boarddir confusion).

2005-06-13  Yves Combe  <yves@ycombe.net>

	PROFILS
	* fix missing columns in db
	* fix NULL string db management.

2005-06-13  Yves Combe  <yves@ycombe.net>

	PROFILS
	* Read board from db at load ! 

2005-06-13  Yves Combe  <yves@ycombe.net>

	* src/gcompris/gameutil.c: suppress parsing xml for l10n. Use gettext.
	PROFILS:
	* Registering boards at first run seems ok.

2005-06-11  Yves Combe  <yves@ycombe.net>

	* Change section behaviour in xml board description
	* some profils works: registering boards almost correct.

2005-06-11  Yves Combe  <yves@ycombe.net>

        Profils stuff again.

2005-06-05  Yves Combe  <yves@ycombe.net>

	PROFILS
	* Database init integrity and VERSION check.

2005-06-03  Yves Combe  <yves@ycombe.net>

	PROFILS
	* add gcompris_db.h gcompris_db.c (interface with sqlite).
	* create table on database creation (gcompris_db_init).

2005-05-30  Yves Combe  <yves@ycombe.net>

	* configure.in: disable gcompris-edit if --enable-profils
	* src/boards/Makefile.am: add PYTHON_LIBS for python module
	* src/gcompris/profile.c: initial import (empty functions, but compiles)

2005-05-30  Yves Combe <yves@ycombe.net>

	* src/gcompris/gcompris.c src/gcompris/properties.c src/gcompris/properties.h: 
	command line parameters for profils database

2005-05-27  Yves Combe  <yves@ycombe.net>

	* -l list feature
	PROFIL STUFF (depends on --enable-profils, work in progress)
	* add -e in gcompris.c, gameutil.c
	* add profile.h (profile.c missing again)
	* add profiles in properties.{c,h} and in gcompris.c
	* fix configure.in and src/gcompris/Makefile.am to compile profiles correctly.
	
2005-05-25  Bruno coudoin  <bruno.coudoin@free.fr>
