@@ -53,7 +53,7 @@ urpmi texi2html
 urpmi tetex
 urpmi gnuchess
 urpmi libSDL_mixer1.2-devel
-
+urpmi libtool
 
 
 
