@@ -1,5 +1,10 @@
 2005-06-14  Yves Combe  <yves@ycombe.net>
 
+	* update INSTALL for libtool.
+	* fix a segfault with gdate.
+
+2005-06-14  Yves Combe  <yves@ycombe.net>
+
 	* fix missing board_dir initialisation when board is read 
 	from db.
 
